Exibicao das avaliacoes

--- a/src/PreTrip/Views/Viagem/Visualizar.cshtml
+++ b/src/PreTrip/Views/Viagem/Visualizar.cshtml
@@ -2,7 +2,7 @@
 
 @model PreTrip.ViewModel.ViagensViewModel
 
-<div class="row" style="background-size: cover; background: url(@Model.Viagem.UrlImagem) center; min-height: 23em;">    
+<div class="row" style="background-size: cover; background: url(@Model.Viagem.UrlImagem) center; min-height: 23em;">
 </div>
 
 <div class="row">
@@ -42,6 +42,7 @@
 
             <hr />
 
+            <!--Comentários-->
             @if (Model.Viagem.Avaliacoes.Any())
             {
                 <div>
@@ -50,7 +51,7 @@
                     </h3>
                     @foreach (var avaliacao in Model.Viagem.Avaliacoes)
                     {
-                        <div>
+                        <div style="padding: 2em; border-top: 1px solid #b6b6b6; border-bottom: 1px solid #b6b6b6;">
                             <h4>@avaliacao.Usuario.Pessoa.Nome</h4>
                             <h5>@avaliacao.Nota</h5>
                             <div>
@@ -71,41 +72,45 @@
                 </div>
             }
 
-            @if (PreTripSession.Usuario != null)
-            {
-                <div>
-                @using (Html.BeginForm("Avaliar", "Viagem", FormMethod.Post))
+            <div style="margin-top: 3em;">
+                <!--Postar comentário-->
+                @if (PreTripSession.Usuario != null)
                 {
-                    @Html.Partial("~/Views/Shared/Validacao/_ValidacaoBasica.cshtml")
+                    <div>
+                        @using (Html.BeginForm("Avaliar", "Viagem", FormMethod.Post))
+                        {
+                            @Html.Partial("~/Views/Shared/Validacao/_ValidacaoBasica.cshtml")
 
-                    @Html.HiddenFor(x => x.Viagem.Id)
+                            @Html.HiddenFor(x => x.Viagem.Id)
 
-                    <div class="form-group">
-                        <label for="descricao">Descrição</label>
-                        @Html.TextAreaFor(x => x.Avaliacao.Comentario, new { @class = "form-control" })
-                        <span class="help-block">Conte-nos como foi sua experiência com essa viagem</span>
-                    </div>
+                            <div class="form-group">
+                                <label for="descricao">Descrição</label>
+                                @Html.TextAreaFor(x => x.Avaliacao.Comentario, new { @class = "form-control" })
+                                <span class="help-block">Conte-nos como foi sua experiência com essa viagem</span>
+                            </div>
 
-                    <div class="form-group">
-                        <label for="descricao">Nota</label>
-                        @Html.EditorFor(x => x.Avaliacao.Nota, new { htmlAttributes = new { placeholder = "R$ 40,00", @class = "form-control" } })
-                        <span class="help-block">Qualifique a qualidade do serviço</span>
-                    </div>
+                            <div class="form-group">
+                                <label for="descricao">Nota</label>
+                                @Html.EditorFor(x => x.Avaliacao.Nota, new { htmlAttributes = new { placeholder = "R$ 40,00", @class = "form-control" } })
+                                <span class="help-block">Qualifique a qualidade do serviço</span>
+                            </div>
 
-                    <div class="pull-right">
-                        <button type="submit" class="btn btn-warning">Comentar!</button>
+                            <div class="pull-right">
+                                <button type="submit" class="btn btn-warning">Comentar!</button>
+                            </div>
+                        }
                     </div>
                 }
-                </div>
-            }
-            else
-            {
-                <div>
-                    Você não pode comentar :/. @Html.ActionLink("Cadastre-se", "Cadastrar", "Home") ou @Html.ActionLink("Entre", "Index", "Home")
-                </div>
-            }
+                else
+                {
+                    <div>
+                        Você não pode comentar :/. @Html.ActionLink("Cadastre-se", "Cadastrar", "Home") ou @Html.ActionLink("Entre", "Index", "Home")
+                    </div>
+                }
+            </div>
         </div>
 
+        <!--Lateral-->
         <div class="col-md-4" style="border-left: 1px solid #808080">
             <div>
                 <div class="standard-infos" style="padding: 1em 2em; font-size: 2rem;">
@@ -122,7 +127,7 @@
                 <div class="clearfix"></div>
 
                 <div class="text-center" style="border-top: 1px solid #808080; padding: 1.3em;">
-                    @{ 
+                    @{
                         var avaliacaoMedia = new PreTrip.Services.Viagens.ViagensService().GetAvaliacaoMedia(Model.Viagem.Avaliacoes);
                     }
                     <span style="vertical-align: middle;">
