--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                     @using (Html.BeginForm("Index", "Viagem", FormMethod.Post, new { @class = "row" }))
                     {
                         <div class="input-group">
-                            @Html.EditorFor(x => x.Busca.Termo, new { htmlAttributes = new { @class = "form-control", placeholder = "Ex: Hopi Hari, CBLoL..." } })
+                            @Html.EditorFor(x => x.Busca.Titulo, new { htmlAttributes = new { @class = "form-control", placeholder = "Ex: Hopi Hari, CBLoL..." } })
                             <span class="input-group-btn">
                                 <button type="submit" class="btn btn-default">Pesquisar</button>
                             </span>
