--- a/src/PreTrip/Views/Viagem/Index.cshtml
+++ b/src/PreTrip/Views/Viagem/Index.cshtml
@@ -3,22 +3,48 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    @using (Html.BeginForm("Index", "Viagem", FormMethod.Post))
+<div class="row">   
+    @using (Html.BeginForm("Buscar", "Viagem", FormMethod.Post))
     {
         <div class="row" style="margin-top: 3em;">
             <div class="col-xs-8 wrapcenter">
                 <h3>Pesquise por mais conteúdo</h3>
-                <div class="input-group">
-                    @Html.EditorFor(x => x.BuscaViagens.Termo, new { htmlAttributes = new { @class = "form-control" } })
-                    <span class="input-group-btn">
+                <div class="form-inline">
+                    <div class="form-group">
+                        Titulo: @Html.EditorFor(x => x.BuscaViagens.Titulo, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>                                              
+                    <div class="form-group" style="margin-left:20px;">
+                        Preço: @Html.EditorFor(x => x.BuscaViagens.Preco, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                </div>   
+                <br />
+                <div class="form-inline">
+                    <div class="form-group">
+                        Quantidade de Lugares: @Html.EditorFor(x => x.BuscaViagens.QuantidadeLugares, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                    <div class="form-group" style="margin-left:20px;">
+                        Lugares Disponíveis: @Html.EditorFor(x => x.BuscaViagens.LugaresDisponiveis, new { htmlAttributes = new { @class = "form-control"} })
+                    </div>
+                </div>
+                <br />
+
+                <div class="form-inline">
+                    <div class="form-group">
+                        Origem: @Html.EditorFor(x => x.BuscaViagens.Origem, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                    <div class="form-group" style="margin-left:20px;">
+                        Destino: @Html.EditorFor(x => x.BuscaViagens.Destino, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+
+                    <div class="form-group" style="margin-left:20px;margin-top:18px;">
                         <button style="height: 34px;" class="btn btn-default" type="submit">Pesquisar</button>
-                    </span>
+                    </div>
                 </div>
             </div>
-        </div>
+        </div> 
     }
 </div>
+<br />
 
 @if (Model.Viagens.Any())
 {
