--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -20,6 +20,7 @@
                     @Html.ActionLink("Empresas", "Empresas", "Usuario", new {@class = "btn btn-default"})
                     @Html.ActionLink("Viagens", "Index", "Viagem", new {@class = "btn btn-default"})
                     @Html.ActionLink("Principais Interesses", "Interesses", "Usuario", new {@class = "btn btn-default"})
+                    @Html.ActionLink("Histórico de pesquisa", "HistoricoPesquisa", "Usuario", new { @class = "btn btn-default" })
                 </div>
             </div>
 
