--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -18,7 +18,7 @@
                 <div class="btn-group-vertical" role="group" style="width: 100%;">
                     @Html.ActionLink("Alterar Meus Dados", "AlterarUsuario", "Usuario", new { @class = "btn btn-default" })
                     @Html.ActionLink("Empresas", "Empresas", "Usuario", new {@class = "btn btn-default"})
-                    @Html.ActionLink("Viagens", "Index", "Viagem", new {@class = "btn btn-default"})
+                    @Html.ActionLink("Viagens", "Viagens", "Usuario", new {@class = "btn btn-default"})
                     @Html.ActionLink("Principais Interesses", "Interesses", "Usuario", new {@class = "btn btn-default"})
                     @Html.ActionLink("Histórico de pesquisa", "HistoricoPesquisa", "Usuario", new { @class = "btn btn-default" })
                 </div>
