--- a/src/PreTrip/Views/Viagem/Index.cshtml
+++ b/src/PreTrip/Views/Viagem/Index.cshtml
@@ -45,6 +45,11 @@
     }
 </div>
 <br />
+<ul class="nav navbar-nav navbar-right" style="margin-right:150px;">
+    <li>
+        @Html.ActionLink("Cadastrar", "Cadastrar", "Viagem", new { @class = "btn btn-success" })
+    </li>
+</ul>
 
 @if (Model.Viagens.Any())
 {
