Criado acao de logout

--- a/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
+++ b/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
@@ -21,8 +21,11 @@
                 }
 
                 <li>
-                    <a href="/Usuario/Index" class="btn navbar-btn btn">@nomeUsuario</a>
-                </li>                
+                    <a href="/Usuario/Index" class="btn navbar-btn btn">@nomeUsuario</a>                    
+                </li>    
+                <li>
+                    <a href="/Usuario/Logout" class = "btn btn-danger", style = "margin-top:8px;margin-left:10px;">Logout</a>  
+                </li>             
             </ul>
         </div>
     </div>
