--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -21,6 +21,7 @@
                     @Html.ActionLink("Viagens", "Viagens", "Usuario", new {@class = "btn btn-default"})
                     @Html.ActionLink("Principais Interesses", "Interesses", "Usuario", new {@class = "btn btn-default"})
                     @Html.ActionLink("Histórico de pesquisa", "HistoricoPesquisa", "Usuario", new { @class = "btn btn-default" })
+                    @Html.ActionLink("Cadastrar Enderecos", "CadastrarEndereco", "Usuario", new { @class = "btn btn-default" })
                 </div>
             </div>
 
