--- a/src/PreTrip/Views/Usuario/CadastrarEndereco.cshtml
+++ b/src/PreTrip/Views/Usuario/CadastrarEndereco.cshtml
@@ -29,6 +29,12 @@
             }
 
             <div class="form-group">
+                <label for="descricao">Rua</label>
+                @Html.EditorFor(model => model.Rua, new { htmlAttributes = new { placeholder = "Rio de Janeiro..", @class = "form-control" } })
+                <span class="help-block">Qual a cidade?</span>
+            </div>
+
+            <div class="form-group">
                 <label for="descricao">Bairro</label>
                 @Html.EditorFor(model => model.Bairro, new { htmlAttributes = new { placeholder = "Que tal... \"Turismo em Copacabana - Rio de Janeiro\"?", @class = "form-control" } })
                 <span class="help-block">Qual o bairro?</span>
@@ -55,7 +61,7 @@
             <div class="form-group">
                 <label for="descricao">Complemento</label>
                 @Html.EditorFor(model => model.Complemento, new { htmlAttributes = new { placeholder = "Perto da praia..", @class = "form-control" } })
-                <span class="help-block">Nos dê uma referencia..</span>
+                <span class="help-block">Ex 403</span>
             </div>                            
 
             <div class="clearfix"></div>
