Inicializado acao de guardar no carrinho

--- a/src/PreTrip/Views/Viagem/Visualizar.cshtml
+++ b/src/PreTrip/Views/Viagem/Visualizar.cshtml
@@ -139,8 +139,8 @@
                 </div>
             </div>
 
-            <a href="@Url.Action("Index","Home")">
-                <img src="http://pt.seaicons.com/wp-content/uploads/2015/06/shopping-cart-add-icon.png" alt="Adicionar Viagem ao Carrinho" style="width: 150px;margin-top: 170px;margin-left: 170px;" />
+            <a href="@Url.Action("AddViagemCarrinho", "Usuario", @Model.Viagem)">
+                <img src="http://pt.seaicons.com/wp-content/uploads/2015/06/shopping-cart-add-icon.png" alt="Adicionar Viagem ao Carrinho" style="width: 150px;margin-top: 170px;margin-left: 170px;" />            
             </a>          
         </div>
     </div>
