--- a/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
+++ b/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
@@ -25,7 +25,12 @@
                 </li>    
                 <li>
                     <a href="/Usuario/Logout" class = "btn btn-danger", style = "margin-top:8px;margin-left:10px;">Logout</a>  
-                </li>             
+                </li> 
+                <li>
+                    <a href="@Url.Action("MeuCarrinho", "Usuario")">
+                        <img src="http://pt.seaicons.com/wp-content/uploads/2015/06/shopping-cart-add-icon.png" alt="Meus pedidos" style="width: 30px;" />
+                    </a>
+                </li>                           
             </ul>
         </div>
     </div>
