--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -4,7 +4,9 @@
     <div class="col-md-10 wrapcenter" style="padding: 3em 0">
         <div class="row">
             <div class="col-md-6">
-                <h3>@PreTripSession.Usuario.Pessoa.Nome</h3>
+                <h3>
+                    @PreTripSession.Usuario.Pessoa.Nome
+               </h3>
                 <p>Procure por sugestões, cadastre viagens.</p>
             </div>
         </div>
