Ajustes na acao de adicionar viagem ao carrinho

--- a/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
+++ b/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
@@ -18,7 +18,7 @@
 
             <div class="texto">
                 <span>
-                   @pedido.Viagem.Titulo
+                  Descrição: @pedido.Viagem.Titulo
                 </span> 
 
                 <br />
@@ -35,7 +35,7 @@
             </div>
 
             <div id="precoViagem">
-                @pedido.Viagem.PrecoPassagem                
+               R$: @pedido.Viagem.PrecoPassagem                
             </div>
 
             <div id="cancelarCompra">
