Criado tabela cidades e iniciado tela de cadastrar interesses

--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -24,6 +24,7 @@
                     @Html.ActionLink("Principais Interesses", "Interesses", "Usuario", new {@class = "btn btn-default"})
                     @Html.ActionLink("Histórico de pesquisa", "HistoricoPesquisa", "Usuario", new { @class = "btn btn-default" })
                     @Html.ActionLink("Cadastrar Enderecos", "CadastrarEndereco", "Usuario", new { @class = "btn btn-default" })
+                    @Html.ActionLink("Cadastrar Interesses", "CadastroInteresses", "Usuario", new {@class = "btn btn-default" })
                 </div>
             </div>
 
