Pequenos detalhes quando itens estão vazios

--- a/src/PreTrip/Views/Shared/Navbar/_PartialDefault.cshtml
+++ b/src/PreTrip/Views/Shared/Navbar/_PartialDefault.cshtml
@@ -27,7 +27,7 @@
                 <li>@Html.ActionLink("Cadastre-se!", "Cadastrar", "Home", attCadastro)</li>
                 <li>
                     <a href="@Url.Action("MeuCarrinho", "Usuario")">
-                        <img src="http://pt.seaicons.com/wp-content/uploads/2015/06/shopping-cart-add-icon.png" alt="Meus pedidos" style="width: 30px;" />
+                        <i class="material-icons" style="vertical-align:middle; color: #000000">shopping_cart</i>
                     </a>
                 </li>
             </ul>
