--- a/src/PreTrip/Views/Viagem/Index.cshtml
+++ b/src/PreTrip/Views/Viagem/Index.cshtml
@@ -4,66 +4,58 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">   
+<div class="row">
     @using (Html.BeginForm("Buscar", "Viagem", FormMethod.Post))
     {
-        <div class="row" style="margin-top: 3em;">
-            <div class="col-xs-8 wrapcenter">
-                <h3>Pesquise por mais conteúdo</h3>
-                <div class="form-inline">
-                    <div class="form-group">
-                        Titulo: @Html.EditorFor(x => x.BuscaViagens.Titulo, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>                                              
-                    <div class="form-group" style="margin-left:20px;">
-                        Preço: @Html.EditorFor(x => x.BuscaViagens.Preco, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>
-                </div>   
-                <br />
-                <div class="form-inline">
-                    <div class="form-group">
-                        Quantidade de Lugares: @Html.EditorFor(x => x.BuscaViagens.QuantidadeLugares, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>
-                    <div class="form-group" style="margin-left:20px;">
-                        Lugares Disponíveis: @Html.EditorFor(x => x.BuscaViagens.LugaresDisponiveis, new { htmlAttributes = new { @class = "form-control"} })
-                    </div>
+    <div class="row" style="margin-top: 3em;">
+        <div class="col-xs-8 wrapcenter">
+            <h3>Pesquise por mais conteúdo</h3>
+            <div class="form-inline">
+                <div class="form-group">
+                    Titulo: @Html.EditorFor(x => x.BuscaViagens.Titulo, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
-                <br />
-
-                <div class="form-inline">
-                    <div class="form-group">
-                        Origem: @Html.EditorFor(x => x.BuscaViagens.Origem, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>
-                    <div class="form-group" style="margin-left:20px;">
-                        Destino: @Html.EditorFor(x => x.BuscaViagens.Destino, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>
-
-                    <div class="form-group" style="margin-left:20px;margin-top:18px;">
-                        <button style="height: 34px;" class="btn btn-default" type="submit">Pesquisar</button>
-                    </div>
+                <div class="form-group" style="margin-left:20px;">
+                    Preço: @Html.EditorFor(x => x.BuscaViagens.Preco, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
-        </div> 
+            <br />
+            <div class="form-inline">
+                <div class="form-group">
+                    Quantidade de Lugares: @Html.EditorFor(x => x.BuscaViagens.QuantidadeLugares, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+                <div class="form-group" style="margin-left:20px;">
+                    Lugares Disponíveis: @Html.EditorFor(x => x.BuscaViagens.LugaresDisponiveis, new { htmlAttributes = new { @class = "form-control"} })
+                </div>
+            </div>
+            <br />
+
+            <div class="form-inline">
+                <div class="form-group">
+                    Origem: @Html.EditorFor(x => x.BuscaViagens.Origem, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+                <div class="form-group" style="margin-left:20px;">
+                    Destino: @Html.EditorFor(x => x.BuscaViagens.Destino, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+
+                <div class="form-group" style="margin-left:20px;margin-top:18px;">
+                    <button style="height: 34px;" class="btn btn-default" type="submit">Pesquisar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     }
 </div>
 <br />
-@{
-    var visivel = "";
 
-    if (PreTripSession.Usuario != null)
-    {
-         visivel = "display:block";
-    }
-    else
-    {
-        visivel = "display:none";
-    }
+
+@if (PreTripSession.Usuario != null)
+{
+    <ul class="nav navbar-nav navbar-right" style="margin-right:150px;">
+        <li>
+            @Html.ActionLink("Cadastrar", "Cadastrar", "Viagem", new { @class = "btn btn-success", style = visivel })
+        </li>
+    </ul>
 }
-
-<ul class="nav navbar-nav navbar-right" style="margin-right:150px;">
-    <li>
-        @Html.ActionLink("Cadastrar", "Cadastrar", "Viagem", new { @class = "btn btn-success",style = visivel })
-    </li>
-</ul>
 
 @if (Model.Viagens.Any())
 {
@@ -75,7 +67,7 @@
 
             @foreach (var viagem in Model.Viagens)
             {
-                <a href="/Viagem/Visualizar/@viagem.Id">                    
+                <a href="/Viagem/Visualizar/@viagem.Id">
                     <div class="viagem-box">
                         <div class="adds pull-right">
                             R$ @viagem.PrecoPassagem <br />
@@ -87,6 +79,20 @@
                     </div>
                 </a>
             }
+        </div>
+    </div>
+}
+else
+{
+    <div class="row">
+        <div class="col-md-10 wrapcenter">
+            <h3 class="text-center">
+                Não existem viagens cadastradas.
+                @if (PreTripSession.Usuario != null)
+                {
+                    @Html.ActionLink("Seja o primeiro a criar!", "Cadastrar", "Viagem", new { @class = "btn btn-success" })
+                }
+            </h3>
         </div>
     </div>
 }
