--- a/src/PreTrip/Views/Viagem/Index.cshtml
+++ b/src/PreTrip/Views/Viagem/Index.cshtml
@@ -52,7 +52,7 @@
 {
     <ul class="nav navbar-nav navbar-right" style="margin-right:150px;">
         <li>
-            @Html.ActionLink("Cadastrar", "Cadastrar", "Viagem", new { @class = "btn btn-success", style = visivel })
+            @Html.ActionLink("Cadastrar", "Cadastrar", "Viagem", new { @class = "btn btn-success"})
         </li>
     </ul>
 }
