--- a/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
+++ b/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
@@ -14,23 +14,22 @@
                     {
                         @class = "btn navbar-btn btn"
                     };
-                }
 
-                @{ 
-                    var nomeUsuario = PreTripSession.Usuario.Pessoa.Nome;
+                    //Pegos os atributos padrão à todos e adiciono o único a cada item
+                    var attLogout = new { @class = att.@class + " btn-danger" };
                 }
 
                 <li>
-                    <a href="/Usuario/Index" class="btn navbar-btn btn">@nomeUsuario</a>                    
+                    @Html.ActionLink(@PreTripSession.Usuario.Pessoa.Nome, "Index", "Usuario", att)
                 </li>    
                 <li>
-                    <a href="/Usuario/Logout" class = "btn btn-danger", style = "margin-top:8px;margin-left:10px;">Logout</a>  
+                    @Html.ActionLink("Logout", "Index", "Usuario", attLogout)
                 </li> 
                 <li>
                     <a href="@Url.Action("MeuCarrinho", "Usuario")">
-                        <img src="http://pt.seaicons.com/wp-content/uploads/2015/06/shopping-cart-add-icon.png" alt="Meus pedidos" style="width: 30px;" />
+                        <i class="material-icons" style="vertical-align: middle; color: #000000">shopping_cart</i>
                     </a>
-                </li>                           
+                </li>                    
             </ul>
         </div>
     </div>
