--- a/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
+++ b/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
@@ -1,4 +1,5 @@
 ﻿@model PreTrip.ViewModel.UsuariosViewModel
+@using PreTrip.Session
 
 <style>
     .pedidosCarrinhoDiv {
@@ -61,25 +62,48 @@
                         </div>
                     </a>
 
-                    <a href="/Viagem/Visualizar/@pedido.ViagemId">
-                        <div class="viagem-body col-md-8">
-                            <div class="col-md-8">
+
+                    <div class="viagem-body col-md-8">
+                        <a href="/Viagem/Visualizar/@pedido.ViagemId">
+                            <div class="col-md-4">
                                 <h3>@pedido.Viagem.Titulo</h3>
                                 @*<p>@pedido.Viagem.Origem.Cidade - @pedido.Viagem.Destino.Cidade</p>*@
                             </div>
 
-                            <div class="col-md-4">
-                                <input type="number" min="0" />
-                                R$ @pedido.Viagem.PrecoPassagem                                                                
-                            </div>
+                        </a>
+
+                        <div class="col-md-6">
+                            Qtd:<br />
+                            <input type="number" min="@pedido.Quantidade" value="@pedido.Quantidade" />
                         </div>
-                    </a>
+
+                        <div class="col-md-2">
+                            R$ @pedido.Viagem.PrecoPassagem
+                        </div>
+                    </div>
                 </div>
             }
 
+            <hr />
 
-            <div>
-                Total: @Model.PrecoTotal
+            <div class="pull-right">
+                <div style="font-size: 2rem; text-align: right">
+                    Total: R$ @Model.PrecoTotal <br />
+                    Desconto: @Model.PrecoDesconto != 0 ? Model.PrecoDesconto : "NENHUM"
+                    Preço Final: R$ @Model.PrecoTotal-Model.PrecoDesconto
+                </div>
+
+                <hr />
+                <div>
+                    @if (PreTripSession.Usuario != null)
+                    {
+                        <button type="submit" class="btn btn-success">Confirmar Compra</button>
+                    }
+                    else
+                    {
+                        <span>@Html.ActionLink("Logue-se", "Index", "Home") para confirmar a compra!</span>
+                    }
+                </div>
             </div>
         }
     }
