--- a/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
+++ b/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
@@ -41,7 +41,7 @@
     }
 </style>
 <div class="container">
-    <h2>MeuCarrinho</h2>
+    <h2>Meu Carrinho</h2>
 
     @*Se não contém nenhum item no carrinho*@
     @if (!Model.Carrinho.Any())
@@ -77,34 +77,59 @@
                             <input type="number" min="@pedido.Quantidade" value="@pedido.Quantidade" />
                         </div>
 
-                        <div class="col-md-2">
+                        <div class="col-md-2" style="font-size: 2rem; vertical-align:middle;">
                             R$ @pedido.Viagem.PrecoPassagem
                         </div>
                     </div>
                 </div>
             }
+        }
 
-            <hr />
+        <hr />
+
+        <div class="pull-right">
+            @if (PreTripSession.Usuario != null)
+                {
+                <button type="submit" class="btn btn-success">Confirmar Compra</button>
+            }
+            else
+            {
+                <span>@Html.ActionLink("Logue-se", "Index", "Home") para confirmar a compra!</span>
+            }
+        </div>
+
+        <div class="clearfix"></div>
+
+        <hr />
 
             <div class="pull-right">
-                <div style="font-size: 2rem; text-align: right">
-                    Total: R$ @Model.PrecoTotal <br />
-                    Desconto: @Model.PrecoDesconto != 0 ? Model.PrecoDesconto : "NENHUM"
-                    Preço Final: R$ @Model.PrecoTotal-Model.PrecoDesconto
+                <div class="col-md-4">
+                    @using (Html.BeginForm("AddCupom", "Usuario", FormMethod.Post))
+                    {
+                        <div>
+                            Cupom: <br />
+                            @Html.EditorFor(x => x.CupomDesconto)
+                            <button type="submit" class="btn btn-warning" style="margin-top: 1em">Descontar</button>
+                        </div>
+                    }
                 </div>
 
-                <hr />
-                <div>
-                    @if (PreTripSession.Usuario != null)
-                    {
-                        <button type="submit" class="btn btn-success">Confirmar Compra</button>
+                <div class="col-md-8" style="font-size: 2rem; text-align: right">
+                    Total: R$ @Model.PrecoTotal
+                    <br />
+                    @{
+                        var desconto = Model.PrecoDesconto != 0 ? Model.PrecoDesconto.ToString() : "NENHUM";
                     }
-                    else
-                    {
-                        <span>@Html.ActionLink("Logue-se", "Index", "Home") para confirmar a compra!</span>
-                    }
+                    <span style="color: #b40b0b">
+                        Desconto: @desconto
+                    </span>
+                    <br />
+                    <span style="color: #099c19">
+                        Preço Final: R$ @Model.PrecoFinal
+                    </span>
+                    <br />
                 </div>
+                <div class="clearfix"></div>
             </div>
-        }
-    }
+                        }
 </div>
