inicializado acao de cadastrar conta para realizar compra

--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -20,10 +20,11 @@
                 <div class="btn-group-vertical" role="group" style="width: 100%;">
                     @Html.ActionLink("Alterar Meus Dados", "AlterarUsuario", "Usuario", new { @class = "btn btn-default" })
                     @Html.ActionLink("Empresas", "Empresas", "Usuario", new {@class = "btn btn-default"})
-                    @Html.ActionLink("Viagens", "Viagens", "Usuario", new {@class = "btn btn-default"})
+                    @Html.ActionLink("Viagens", "Viagens", "Usuario", new { @class = "btn btn-default" })
                     @Html.ActionLink("Principais Interesses", "Interesses", "Usuario", new {@class = "btn btn-default"})
                     @Html.ActionLink("Histórico de pesquisa", "HistoricoPesquisa", "Usuario", new { @class = "btn btn-default" })
-                    @Html.ActionLink("Cadastrar Enderecos", "CadastrarEndereco", "Usuario", new { @class = "btn btn-default" })                    
+                    @Html.ActionLink("Cadastrar Enderecos", "CadastrarEndereco", "Usuario", new { @class = "btn btn-default" })            
+                    @Html.ActionLink("Cadastrar Conta", "CadastrarContaBancaria", "Usuario", new { @class = "btn btn-default" })        
                 </div>
             </div>
 
