--- a/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
+++ b/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
@@ -90,8 +90,8 @@
         <div class="pull-right">
             @if (PreTripSession.Usuario != null)
                 {
-                <button type="submit" class="btn btn-success">Confirmar Compra</button>
-            }
+                    @Html.ActionLink("Confirmar Compra", "ConfirmarCompra", "Usuario", new { @class = "btn btn-success" })                
+                }
             else
             {
                 <span>@Html.ActionLink("Logue-se", "Index", "Home") para confirmar a compra!</span>
