--- a/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
+++ b/src/PreTrip/Views/Shared/Navbar/_PartialUsuarioLogado.cshtml
@@ -20,6 +20,11 @@
                 }
 
                 <li>
+                    <a href="@Url.Action("Index", "Home")" class="btn navbar-btn btn btn-success">                        
+                        Home
+                    </a>
+                </li>
+                <li>
                     @Html.ActionLink(@PreTripSession.Usuario.Pessoa.Nome, "Index", "Usuario", att)
                 </li>    
                 <li>
