--- a/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
+++ b/src/PreTrip/Views/Usuario/MeuCarrinho.cshtml
@@ -1,6 +1,5 @@
 ﻿@model PreTrip.ViewModel.UsuariosViewModel
 @using PreTrip.Session
-
 <style>
     .pedidosCarrinhoDiv {
         width: 650px;
@@ -42,7 +41,6 @@
 </style>
 <div class="container">
     <h2>Meu Carrinho</h2>
-
     @*Se não contém nenhum item no carrinho*@
     @if (!Model.Carrinho.Pedidos.Any())
     {
@@ -52,8 +50,10 @@
     }
     else
     {
-        using (Html.BeginForm("ConfirmarCompra", "Usuario", FormMethod.Post))
+        using (Html.BeginForm("MeuCarrinho", "Usuario", FormMethod.Post))
         {
+            Html.HiddenFor(x => x.Carrinho);
+
             foreach (var pedido in Model.Carrinho.Pedidos)
             {
                 <div class="row viagem-box">
@@ -62,21 +62,16 @@
                         </div>
                     </a>
 
-
                     <div class="viagem-body col-md-8">
                         <a href="/Viagem/Visualizar/@pedido.ViagemId">
                             <div class="col-md-4">
                                 <h3>@pedido.Viagem.Titulo</h3>
                                 @*<p>@pedido.Viagem.Origem.Cidade - @pedido.Viagem.Destino.Cidade</p>*@
                             </div>
-
                         </a>
-
                         <div class="col-md-6">
-                            Qtd:<br />
-                            <input type="number" min="@pedido.Quantidade" value="@pedido.Quantidade" />
+                            Qtd: @pedido.Quantidade<br />
                         </div>
-
                         <div class="col-md-2" style="font-size: 2rem; vertical-align:middle;">
                             R$ @pedido.Viagem.PrecoPassagem
                         </div>
@@ -84,53 +79,57 @@
                 </div>
             }
 
-        <hr />
+            <hr />
 
-        <div class="pull-right">
-            @if (PreTripSession.Usuario != null)
+            <div class="pull-right">
+                @if (PreTripSession.Usuario != null)
                 {
-                    @Html.ActionLink("Confirmar Compra", "ConfirmarCompra", "Usuario", new { @class = "btn btn-success" })                
-            }
-            else
-            {
-                <span>@Html.ActionLink("Logue-se", "Index", "Home") para confirmar a compra!</span>
-            }
-        </div>
+                    <button type="submit" class="btn btn-success">Confirmar Compra</button>
+                }
+                else
+                {
+                    <span>@Html.ActionLink("Logue-se", "Index", "Home") para confirmar a compra!</span>
+                }
+            </div>
 
         }
         <div class="clearfix"></div>
 
         <hr />
 
-            <div class="pull-right">
-                <div class="col-md-4">
-                    @using (Html.BeginForm("AddCupom", "Usuario", FormMethod.Post))
-                    {
-                        <div>
-                            Cupom: <br />
-                            @Html.EditorFor(x => x.Carrinho.CupomDesconto)
-                            <button type="submit" class="btn btn-warning" style="margin-top: 1em">Descontar</button>
-                        </div>
-                    }
-                </div>
-
-                <div class="col-md-8" style="font-size: 2rem; text-align: right">
-                    Total: R$ @Model.Carrinho.PrecoTotal
-
-                    <br />
-                    @{
-                        var desconto = Model.Carrinho.PrecoDesconto != 0 ? Model.Carrinho.PrecoDesconto.ToString() : "NENHUM";
-                    }
-                    <span style="color: #b40b0b">
-                        Desconto: @desconto
-                    </span>
-                    <br />
-                    <span style="color: #099c19">
-                        Preço Final: R$ @Model.Carrinho.PrecoFinal
-                    </span>
-                    <br />
-                </div>
-                <div class="clearfix"></div>
+        <div class="pull-right">
+            <div class="col-md-4">
+                @using (Html.BeginForm("AddCupom", "Usuario", FormMethod.Post))
+                {
+                    <div>
+                        Cupom: <br />
+                        @Html.EditorFor(x => x.Carrinho.CupomDesconto)
+                        <button type="submit" class="btn btn-warning" style="margin-top: 1em">Descontar</button>
+                    </div>
+                }
             </div>
-                        }
+
+            <div class="col-md-8" style="font-size: 2rem; text-align: right">
+                Saldo: R$ @PreTripSession.Usuario.Pessoa.ContaBancaria.Saldo
+                <br />
+                Total: R$ @Model.Carrinho.PrecoTotal
+                <br />
+                @{
+                    var desconto = Model.Carrinho.PrecoDesconto != 0 ? Model.Carrinho.PrecoDesconto.ToString() : "NENHUM";
+                }
+                <span style="color: #b40b0b">
+                    Desconto: @desconto
+                </span>
+                <br />
+                <span style="color: #099c19">
+                    Preço Final: R$ @Model.Carrinho.PrecoFinal
+                </span>
+                <br />
+                <span style="color: #099c19">
+                    Saldo final: R$ @(PreTripSession.Usuario.Pessoa.ContaBancaria.Saldo - Model.Carrinho.PrecoFinal)
+                </span>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+                    }
 </div>
